--- a/aula08/redes_neurais_classificacao_imagens.ipynb
+++ b/aula08/redes_neurais_classificacao_imagens.ipynb
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,10 +1448,9 @@
     "    def forward(self, x):\n",
     "        # O input passa pela primeira camada\n",
     "        x = torch.sigmoid( self.fc1(x) )\n",
-    "        # O input passa pela segunda camada        \n",
+    "        # A saída da primeira passa pela segunda camada        \n",
     "        x = torch.sigmoid( self.fc2(x) )\n",
-    "        # O input passa pela terceira camada        \n",
-    "        z\n",
+    "        # A saída da segunda passa pela terceira camada        \n",
     "        return x"
    ]
   },
@@ -1821,9 +1820,9 @@
     "    def forward(self, x):\n",
     "        # O input passa pela primeira camada\n",
     "        x = torch.tanh( self.fc1(x) )\n",
-    "        # O input passa pela segunda camada\n",
+    "        # A saída da primeira passa pela segunda camada\n",
     "        x = torch.tanh( self.fc2(x) )\n",
-    "        # O input passa pela terceira camada\n",
+    "        # A saída da segunda passa pela terceira camada\n",
     "        x = F.softmax( self.fc3(x) , dim=1 )\n",
     "        return x"
    ]
@@ -1997,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 40,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -2018,9 +2017,9 @@
     "    def forward(self, x):\n",
     "        # O input passa pela primeira camada\n",
     "        x = torch.relu( self.fc1(x) )\n",
-    "        # O input passa pela segunda camada\n",
+    "        # A saída da primeira passa pela segunda camada\n",
     "        x = torch.relu( self.fc2(x) )\n",
-    "        # O input passa pela terceira camada  \n",
+    "        # A saída da segunda passa pela terceira camada  \n",
     "        x = F.softmax( self.fc3(x) , dim=1 )\n",
     "        return x"
    ]
