--- a/aula01/introducao_disciplina.ipynb
+++ b/aula01/introducao_disciplina.ipynb
@@ -29,12 +29,12 @@
    "source": [
     "- **Nome do professor**: Carlos Andres Ferrero\n",
     "\n",
-    "- A disciplina exige:\n",
+    "- Para um bom aproveitamento da disciplina é necessário:\n",
     "    - Dedicação, compromisso e atenção em sala de aula\n",
-    "    - Procurar o professor quando estiverem com dúvidas:\n",
-    "    - No horário de atendimento\n",
+    "    - **Participacão nas aulas síncronas**\n",
+    "    - Procurar o professor quando estiverem com dúvidas, preferencialmente no horário de atendimento:    \n",
     "    - **Email**: andres.ferrero@ifsc.edu.br\n",
-    "    - Chegar no horário correto da aula. Se tiver qualquer situação específica, entrar em contato com o professor."
+    "    - Chegar no horário correto da aula síncrona. Se tiver qualquer situação específica, entrar em contato com o professor."
    ]
   },
   {
@@ -47,7 +47,7 @@
    "source": [
     "# Conteúdo Programático\n",
     "\n",
-    "1. Introdução\n",
+    "1. Introdução a Análise de Dados\n",
     "\n",
     "2. Análise de Dados Textuais\n",
     "\n",
@@ -62,10 +62,13 @@
     }
    },
    "source": [
-    "## 1. Introdução\n",
+    "## Unidade 1 - Introdução à Análise de Dados\n",
+    "\n",
     "- Conceitos de Aprendizado de Máquina e Ciência de Dados\n",
     "- Ferramentas e linguagens de programação para Ciência de Dados\n",
-    "- Visualização de dados univariados e multivariados"
+    "- Visualização de dados univariados e multivariados\n",
+    "\n",
+    "**Projeto: Desenvolvimento de um Dashboard usando Python**"
    ]
   },
   {
@@ -76,10 +79,13 @@
     }
    },
    "source": [
-    "## 2. Análise de Dados Textuais\n",
+    "## UNIDADE 2 – Análise de Dados Textuais\n",
+    "\n",
     "- Técnicas de Processamento de Linguagem Natural\n",
     "- Representação de Textos\n",
-    "- Modelos para Classificação de Textos"
+    "- Modelos para Classificação de Textos\n",
+    "\n",
+    "**Projeto: Desenvolvimento de um Classificador de Textos para Análise de Sentimento em Português**"
    ]
   },
   {
@@ -90,34 +96,15 @@
     }
    },
    "source": [
-    "## 3. Aplicações em Redes Neurais\n",
+    "## UNIDADE 3 – Aplicações em Redes Neurais\n",
     "\n",
     "- Bibliotecas para Construção de Redes Neurais\n",
     "- Análise de Dados de Imagem\n",
-    "- Análise de Dados Sequenciais e Texto"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Avaliação\n",
+    "- Análise de Dados Sequenciais e Texto\n",
     "\n",
-    "Serão realizadas as seguintes avaliações:\n",
-    "- $P1$ - Prova prática abordando Unidades 1 e 2\n",
-    "- $T1$ - Trabalho prático abordando as Unidades 3\n",
+    "**Projeto: Análise e Comparação da Performance de Modelos de Classificação de Imagens**\n",
     "\n",
-    "O valor das notas serão em valores inteiros. Em caso de notas quebradas (ex. 8,3 ou 8,6) usa-se o arredondamento matemático (ex. 8,3 para 8 e 8,6 para 9).\n",
-    "\n",
-    "A Nota Final (NF) será calculada de acordo com a seguinte fórmula:\n",
-    "\n",
-    "$$ NF = (0.5 * P1 + 0.5 * T1) $$\n",
-    "\n",
-    "O valor da nota NF também será arredondado para um número inteiro."
+    "**Projeto: Predição de Dados Sequênciais ou Temporais**"
    ]
   },
   {
@@ -136,24 +123,8 @@
     "- Álgebra (vetores, matrizes, multiplicação de matrizes, etc.)\n",
     "- Cálculo (noções de derivada e derivada parcial)\n",
     "- Programação (como para aprender uma nova linguagem)\n",
+    "- Mineração de Dados (conceitos básicos de mineração)\n",
     "- Processamento de Imagens (transformações básicas, filtros, detecção de borda, etc.)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Recuperação\n",
-    "\n",
-    "São previstas as recuperações:\n",
-    "- $RP1$ - Recuperação da P1\n",
-    "- $RP2$ - Recuperação do T1\n",
-    "\n",
-    "Estas recuperações serão feitas dentro da carga horária da disciplina."
    ]
   },
   {
@@ -167,11 +138,10 @@
     "# Bibliografia\n",
     "\n",
     "## Básica\n",
-    "\n",
     "- GOLDSCHMIDT, R.; PASSOS, E.; BEZERRA, E. **Data mining: conceitos, técnicas, algoritmos, orientações e aplicações**. 2. ed. Rio de Janeiro: Elsevier, 2015.\n",
     "- AMARAL, Fernando. **Introdução à Ciência de Dados**. Rio de Janeiro: Alta Books, 2016. 304 p. ISBN 9788576089346.\n",
-    "- RUSSELL, S.; NORVIG, P. **Inteligência artificial: referência completa para cursos de computação**. 3 ed. São Paulo: Elsevier, 2013. 988 p.\n",
-    "- MCKINNEY, Wes. **Python para Análise de Dados**. São Paulo: Novatec, 2018. 615 p. ISBN 9788575226476."
+    "- MCKINNEY, Wes. **Python para Análise de Dados**. São Paulo: Novatec, 2018. 615 p. ISBN 9788575226476.\n",
+    "- RUSSELL, S.; NORVIG, P. **Inteligência artificial: referência completa para cursos de computação**. 3 ed. São Paulo: Elsevier, 2013. 988 p."
    ]
   },
   {
@@ -184,25 +154,50 @@
    "source": [
     "## Complementar\n",
     "- ATTWELL, P. A.; MONAGHAN, D. B. **Data mining for the social sciences: an introduction**. Oakland: University of California Press, 2015.\n",
-    "- AZZALINI, A.; WALTON, G.; SCARPA, B. **Data analysis and data mining: an introduction**. Oxford: Oxford University Press, 2012.\n",
-    "- **ANALÍTICA de dados com Hadoop: uma introdução para cientistas de dados**. Tradução de Lucia A. Knoshita. São Paulo: Novatec, 2018. 346 p., il. ISBN 9788575225219."
+    "- HAYKIN, Simon. **Redes neurais: princípios e prática**. 2. ed. Porto Alegre: Bookman, 2008. 900 p.\n",
+    "- AZZALINI, A.; WALTON, G.; SCARPA, B. **Data analysis and data mining: an introduction**. Oxford: Oxford University Press, 2012."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Livros Online nas Bibliotecas Virtuais do IFSC\n",
+    "\n",
+    "Pesquisa no Minha Biblioteca: https://app.minhabiblioteca.com.br/#/search?q=data%20science\n",
+    "- Inteligência Artificial - Uma Abordagem de Aprendizado de Máquina. http://app.minhabiblioteca.com.br/#/books/9788521637509/.\n",
+    "- Processamentos de Linguagem Natural. https://app.minhabiblioteca.com.br/#/books/9786556900575/\n",
+    "- Visualização de Dados. https://app.minhabiblioteca.com.br/#/books/978655690027\n",
+    "- Aprendizado profundo para leigos. https://app.minhabiblioteca.com.br/#/books/9788550816982/\n",
+    "\n",
+    "Pesquisa no Acervo Virtual:\n",
+    "- Deep Learning with PyTorch: A Practical Approach to Building Neural Network Models Using PyTorch. http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=1728031&lang=pt-br&site=ehost-live\n",
+    "- Deep Learning with Keras. http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=1510480&lang=pt-br&site=ehost-live"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "R",
-   "language": "R",
-   "name": "ir"
+   "display_name": "Python 3.7.3 64-bit ('dm': conda)",
+   "language": "python",
+   "name": "python37364bitdmcondafea7b51c5cad4e889e04c2cd00176858"
   },
   "language_info": {
-   "codemirror_mode": "r",
-   "file_extension": ".r",
-   "mimetype": "text/x-r-source",
-   "name": "R",
-   "pygments_lexer": "r",
-   "version": "3.3.3"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
