--- a/aula01/introducao_disciplina.ipynb
+++ b/aula01/introducao_disciplina.ipynb
@@ -30,8 +30,7 @@
     "- **Nome do professor**: Carlos Andres Ferrero\n",
     "\n",
     "- Para um bom aproveitamento da disciplina é necessário:\n",
-    "    - Dedicação, compromisso e atenção em sala de aula\n",
-    "    - **Participacão nas aulas síncronas**\n",
+    "    - Dedicação, compromisso e atenção em sala de aula    \n",
     "    - Procurar o professor quando estiverem com dúvidas, preferencialmente no horário de atendimento:    \n",
     "    - **Email**: andres.ferrero@ifsc.edu.br\n",
     "    - Chegar no horário correto da aula síncrona. Se tiver qualquer situação específica, entrar em contato com o professor."
@@ -68,7 +67,7 @@
     "- Ferramentas e linguagens de programação para Ciência de Dados\n",
     "- Visualização de dados univariados e multivariados\n",
     "\n",
-    "**Projeto: Desenvolvimento de um Dashboard usando Python**"
+    "**Projeto: Desenvolvimento de um Dashboard usando Python/Dash/Flask**"
    ]
   },
   {
@@ -123,8 +122,7 @@
     "- Álgebra (vetores, matrizes, multiplicação de matrizes, etc.)\n",
     "- Cálculo (noções de derivada e derivada parcial)\n",
     "- Programação (como para aprender uma nova linguagem)\n",
-    "- Mineração de Dados (conceitos básicos de mineração)\n",
-    "- Processamento de Imagens (transformações básicas, filtros, detecção de borda, etc.)"
+    "- Mineração de Dados (conceitos básicos de mineração)"
    ]
   },
   {
